infrastructure/k8s/apps/student-portal/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: student-portal
  namespace: default
  labels:
    app: student-portal
spec:
  replicas: 1
  selector:
    matchLabels:
      app: student-portal
  template:
    metadata:
      labels:
        app: student-portal
    spec:
      containers:
        - name: student-portal
          image: ghcr.io/udaarash23/university-portal-student:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: student-portal
  namespace: default
spec:
  selector:
    app: student-portal
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
